--- a/Lesson2/style.css
+++ b/Lesson2/style.css
@@ -62,6 +62,8 @@ div {
     background-color: #f0c5e5;
     /* font chữ */
     font-family: 'Gill Sans', sans-serif;
+    /* Chiều ngang */
+    width: 700px;
 }
 
 h2 {
