--- a/Lesson4/style.css
+++ b/Lesson4/style.css
@@ -1,3 +1,11 @@
+.position1 {
+    position: relative;
+}
+
+.position1 p {
+    margin: 0;
+}
+
 .child {
     position: relative;
     background-color: lightblue;
@@ -7,4 +15,26 @@
     /* Chỉnh vị trí */
     top: 10px;
     left: 20px;
+}
+
+.child2 {
+    position: absolute;
+    background-color: lightblue;
+    /* Chiều ngang vừa với nội dung */
+    width: fit-content;
+    height: 30px;
+    /* Chỉnh vị trí */
+    top: 100px;
+    left: 20px;
+}
+
+.child3 {
+    position: fixed;
+    background-color: lightblue;
+    /* Chiều ngang vừa với nội dung */
+    width: fit-content;
+    height: 30px;
+    /* Chỉnh vị trí */
+    bottom: 10px;
+    right: 10px;
 }
